--- a/h.html
+++ b/h.html
@@ -20,7 +20,7 @@ Born in Ranchi, Bihar (now in Jharkhand),[8][9] His<i> exceptional wicketkeeping
 <p>2<sup>2</sup></p>
 <p>log<sub>10</sub></p>
 
-<center><a>Pavan </a>
+<center><a>Pavan deepak suresh praveen </a>
 </center>
 
 
